--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "flat-array",
   "version": "1.0.0",
+  "scripts": {
+    "test": "jest --watch"
+  },
   "main": "index.js",
   "repository": "https://github.com/pierroberto/flat-array",
   "author": "pierroberto <pierroberto.lucisano@gmail.com>",
